--- a/accessori.html
+++ b/accessori.html
@@ -190,8 +190,8 @@
 						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 						<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 					</ul>-->
-					<p>Suoletta in MEMORY FOAM per garantirvi il massimo comfort, specialmente nelle lunghe camminate o mentre lavorate. Oltre al memory foam sono dotate del rinforzo nella parte interna del piede e sono più adatte in autunno o in inverno. Tutte le taglie sono disponibili.
-                        <br>Disponibile in tutti i numeri
+					<p>Suoletta in MEMORY FOAM per garantirvi il massimo comfort, specialmente nelle lunghe camminate o mentre lavorate. Oltre al memory foam sono dotate del rinforzo nella parte interna del piede e sono più adatte in autunno o in inverno.
+                        <br>Disponibile in tutte le taglie
                     </p>
 					<!--
 					<div class="product_count">
@@ -302,7 +302,7 @@
 						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 						<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 					</ul>-->
-					<p>Kit completo per il restauro delle tue scarpe o dei tuoi scarponi. A seconda del vostro modello, potrete avere un paio di lacci nuovi, un paio di calzini di spugna lunghi, una scatoletta di grasso di FOCA MOS, un paio di suolette nuove, un biglietto da visita, uno stickers MOS, una spugna per dare il grasso e infine una pratica borsetta di plastica con i manici.</p>
+					<p>Kit completo per il restauro delle tue scarpe o dei tuoi scarponi. A seconda del vostro modello, potrete avere un paio di lacci nuovi, un paio di calzini di spugna lunghi, una scatoletta di grasso, un paio di suolette nuove e una spugna per dare il grasso.</p>
 					<!--
 					<div class="product_count">
 						<label for="qty">Quantity:</label>
@@ -347,7 +347,7 @@
 			<div class="col-lg-5 offset-lg-1">
 				<div class="s_product_text">
 					<h3></h3>
-					<h2>GRASSO FOCA MOS</h2>
+					<h2>GRASSO MOS</h2>
 					<!--
 					<ul class="list">
 						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
@@ -405,7 +405,7 @@
 						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 						<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 					</ul>-->
-					<p>Calzini impermeabili/waterproof meta-stinco, perfetti per chi non vuole privarsi di usare una scarpa completamente in pelle, ma al tempo stesso non vuole avere i piedi bagnati. 
+					<p>Calzini impermeabili/waterproof corti, perfetti per chi non vuole privarsi di usare una scarpa completamente in pelle, ma al tempo stesso non vuole avere i piedi bagnati. 
                         <br>Tutte le taglie disponibili.
                     </p>
 					<!--
@@ -458,7 +458,7 @@
 						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 						<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 					</ul>-->
-					<p>T-shirt 100% cottone, perfetta per chi vuole stare comodo e non avere problemi durante i lavaggi. Disponibile tutta nera oppure tutta bianca con la scritta nera e rossa. Tutte le taglie sono disponibili (dalla S alla XL). La maglia ha una scritta piccola nella parte sinistra vicino al cuore e infine ha anche una scritta molto più grande nella parte posteriore.
+					<p>T-shirt 100% cotone, perfetta per chi vuole stare comodo e non avere problemi durante i lavaggi. Tutte le taglie sono disponibili (dalla S alla XL). La maglia ha una  piccola scritta nella parte sinistra in alto e anche una molto più grande nella parte posteriore.
                     </p>
 					<!--
 					<div class="product_count">
@@ -500,13 +500,68 @@
 			<div class="col-lg-5 offset-lg-1">
 				<div class="s_product_text">
 					<h3></h3>
-					<h2>TRAVERSA MOS</h2>
+					<h2>GREMBIULE MOS</h2>
 					<!--
 					<ul class="list">
 						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 						<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 					</ul>-->
-					<p>TRAVERSA 100% cotone da lavoro o da cucina, dotata di una grande tasca anteriore. Inoltre, si può regolare l'altezza a seconda della vostra statura.
+					<p>Grembiule regolabile con tasca 100% cotone da lavoro o da cucina, dotata di una grande tasca anteriore. Inoltre, si può regolare l'altezza a seconda della vostra statura.
+                    </p>
+					<!--
+					<div class="product_count">
+						<label for="qty">Quantity:</label>
+						<input type="text" name="qty" id="sst" maxlength="12" value="1" title="Quantity:" class="input-text qty">
+						<button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+						 class="increase items-count" type="button"><i class="lnr lnr-chevron-up"></i></button>
+						<button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+						 class="reduced items-count" type="button"><i class="lnr lnr-chevron-down"></i></button>
+					</div>
+					<div class="card_area d-flex align-items-center">
+						<a class="primary-btn" href="#">Add to Cart</a>
+						<a class="icon_btn" href="#"><i class="lnr lnr lnr-diamond"></i></a>
+						<a class="icon_btn" href="#"><i class="lnr lnr lnr-heart"></i></a>
+					</div>
+				-->
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<!--================End Single Product Area =================-->
+
+
+<!----start------------------------KIDSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS------------------------------------------------------------------>
+<div class="product_image_area">
+	<div class="container">
+		
+		<div class="row s_product_inner">
+			<div class="col-lg-6">
+				<div class="s_Product_carousel">
+					<div class="single-prd-item">
+						<img class="img-fluid" src="img-mos/accessori/g1.png" alt="">
+					</div>
+					<div class="single-prd-item">
+						<img class="img-fluid" src="img-mos/accessori/g2.png" alt="">
+					</div>
+					<!--
+					<div class="single-prd-item">
+						<img class="img-fluid" src="img-mos/2d.png" alt="">
+					</div>-->
+				</div>				
+			</div>
+			<div class="col-lg-5 offset-lg-1">
+				<div class="s_product_text">
+					<h3></h3>
+					<h2>GIUBBOTTO MOS</h2>
+					<!--
+					<ul class="list">
+						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
+						<li><a href="#"><span>Availibility</span> : In Stock</a></li>
+					</ul>-->
+					<p>Giubbotto da mezza stagione, personalizzabile con il tuo nome. 4 pratiche tasche. Cappuccio removibile e polsi regolabili con strap. Tutte le taglie sono disponibili.
                     </p>
 					<!--
 					<div class="product_count">
@@ -529,6 +584,56 @@
 	</div>
 </div>
 <!--================End Single Product Area =================-->
+
+
+<!----start------------------------KIDSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS------------------------------------------------------------------>
+<div class="product_image_area">
+	<div class="container">
+		
+		<div class="row s_product_inner">
+			<div class="col-lg-6">
+					<div class="single-prd-item">
+						<img class="img-fluid" src="img-mos/accessori/z.png" alt="">
+					</div>
+					<!--
+					<div class="single-prd-item">
+						<img class="img-fluid" src="img-mos/2d.png" alt="">
+					</div>-->
+			</div>
+			<div class="col-lg-5 offset-lg-1">
+				<div class="s_product_text">
+					<h3></h3>
+					<h2>FELPA MOS</h2>
+					<!--
+					<ul class="list">
+						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
+						<li><a href="#"><span>Availibility</span> : In Stock</a></li>
+					</ul>-->
+					<p>Felpa senza cappuccio in cotone con nome ricamato nella parte sinistra. Tutte le taglie sono disponibili.
+                    </p>
+					<!--
+					<div class="product_count">
+						<label for="qty">Quantity:</label>
+						<input type="text" name="qty" id="sst" maxlength="12" value="1" title="Quantity:" class="input-text qty">
+						<button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+						 class="increase items-count" type="button"><i class="lnr lnr-chevron-up"></i></button>
+						<button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+						 class="reduced items-count" type="button"><i class="lnr lnr-chevron-down"></i></button>
+					</div>
+					<div class="card_area d-flex align-items-center">
+						<a class="primary-btn" href="#">Add to Cart</a>
+						<a class="icon_btn" href="#"><i class="lnr lnr lnr-diamond"></i></a>
+						<a class="icon_btn" href="#"><i class="lnr lnr lnr-heart"></i></a>
+					</div>
+				-->
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!--================End Single Product Area =================-->
+
+
 
 <!----end--------------------------KIDSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS------------------------------------------------------------------>
 <!-- start footer Area -->
