--- a/curascarpa.html
+++ b/curascarpa.html
@@ -201,8 +201,8 @@
 						<p class="text-center">
 							<br><br>
 							<strong>TERZO STEP</strong><br>
-                                Il terzo step invece, riguarderà il grasso. Con una spugna o una spazzola diversa da quella che avete usato nel secondo step, potrete prendere un po’ di grasso di foca e darlo pian piano in tutta la parte esterna.
-                                Potete usare il nostro grasso o quello di altri marchi e il risultato non cambierà. L’importante è darlo minimo 2 volte al mese, anche di più se state spesso sotto la pioggia. Infatti, per chi ci lavora con gli scarponi e sta anche sotto l’acqua potrà farci anche un trattamento anti acqua ogni tanto, spruzzando del silicone (che potete anche comprare qua da noi), ovviamente a scarpa pulita. Dopo di che aspettare 10 minuti e darci il grasso di foca.
+                                Il terzo step invece, riguarderà il grasso. Con una spugna o una spazzola diversa da quella che avete usato nel secondo step, potrete applicare un po’ di grasso e darlo pian piano in tutta la parte esterna.
+                                Potete usare il nostro grasso o quello di altri marchi e il risultato non cambierà. L’importante è darlo minimo 2 volte al mese, anche di più se state spesso sotto la pioggia. Per chi lavora con gli scarponi in condizioni di bagnato, potrà farci un trattamento anti acqua ogni tanto, spruzzando del silicone (che potete anche comprare qui da noi), ovviamente a scarpa pulita e asciutta. Dopo di che aspettare 10 minuti applicare il grasso.
 						</p>
 					</div>
 				</div>
