--- a/enduro.html
+++ b/enduro.html
@@ -149,7 +149,7 @@
 							<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 							<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 						</ul>-->
-						<p>L’unico modello al mondo da enduro, completamente in pelle, come si facevano una volta. Cosi da permettervi di avere una sensibilità maggiore nei piedi e di conseguenza nel uso del freno posteriore. Inoltre, sarà molto più duraturo di qualsiasi paio di plastica moderno. Infine, ha la cucitura sul fondo cosi da permettervi di cambiare le suole in modo economico e veloce.</p>
+						<p>Stivale completamente in pelle, come si facevano una volta, vi daranno maggior sensibilità nell uso dei freni, più durevoli della plastica, con cuciture del fondo a Ideal per cambiare la suola in modo veloce. Inoltre, sarà molto più duraturo di qualsiasi paio di plastica moderno. Infine, ha la cucitura sul fondo cosi da permettervi di cambiare le suole in modo economico e veloce.</p>
 						<!--
 						<div class="product_count">
 							<label for="qty">Quantity:</label>
@@ -420,7 +420,7 @@
 				</div>
 				<!--aaaaaa-->
 				<div class="tab-pane fade show active" id="review" role="tabpanel" aria-labelledby="review-tab">
-					<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+					<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
 					<div class="row">
 						<div class="col-6">
 							<img class="img-fluid" src="img-mos/misure1.jpeg" alt="">
