--- a/montgna&lavoro.html
+++ b/montgna&lavoro.html
@@ -146,7 +146,7 @@
 							<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 							<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 						</ul>-->
-						<p>L’unico modello al mondo, per i pastori o per i contadini, che è impermeabile pur non avendo nessun sacchetto di plastica all’interno, ma bensì pelle anche all'interno. E’ composto da una tomaia a taglio unico e da una pelle Svizzera, chiamata Gallusser, di 3,2mm. Viene chiamato anche: ‘SCARPONE ETERNO’</p>
+						<p>Scarpone per pastori o agricoltori, impermeabile, pur non avendo nessun sacchetto di plastica, ma bensì pelle anche all'interno. E’ composto da una tomaia a taglio unico e da una pelle Svizzera, chiamata Gallusser, di 3,2mm. Viene chiamato anche: ‘SCARPONE ETERNO’</p>
 						<!--
 						<div class="product_count">
 							<label for="qty">Quantity:</label>
@@ -392,7 +392,7 @@
 				</div>
 				<!--aaaaaa-->
 				<div class="tab-pane fade show active" id="review" role="tabpanel" aria-labelledby="review-tab">
-					<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+					<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
 					<div class="row">
 						<div class="col-4 text-center"></div>
 							<img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -572,7 +572,7 @@
 						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 						<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 					</ul>-->
-					<p>L’unico scarpone che ha la fodera impermeabile copiata con la pelle, così da avere uno scarpone waterproof, ma allo stesso tempo, avere il piede a contatto con la pelle. E’ una soluzione con una pelle più leggera rispetto a quella in vacchetta, questi scarponi vanno benissimo anche per chi cammina in montagna o per i contadini che desiderano uno scarpone più morbido.</p>
+					<p>L’unico scarpone che ha una doppia fodera, una impermeabile e l'altra in pelle, così da avere uno scarpone waterproof, ma allo stesso tempo, avere il piede a contatto con la pelle. E’ una soluzione con una pelle più leggera rispetto a quella in vacchetta, questi scarponi vanno benissimo anche per chi cammina in montagna o per i contadini che desiderano uno scarpone più morbido.</p>
 					<!--
 					<div class="product_count">
 						<label for="qty">Quantity:</label>
@@ -806,7 +806,7 @@
 
 			</div>
 			<div class="tab-pane fade show active" id="review1" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -1256,7 +1256,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review2" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -1440,7 +1440,7 @@
 						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 						<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 					</ul>-->
-					<p>L’oggetto perfetto, per coloro che preferiscono andare a caccia con uno scarpone alto, in modo tale da stare al caldo e essere protetti dall’acqua fino a meta tibia. Anche in questo caso è l’unico scarpone al mondo ad essere impermeabile e al tempo stesso vi permette di avere il piede a contatto con la pelle. Inoltre, grazie all’uso del verde e del marrone siete perfettamente mimetici.</p>
+					<p>L’oggetto perfetto, per coloro che preferiscono andare a caccia con uno scarpone alto, in modo tale da stare al caldo e essere protetti dall’acqua fino a meta tibia. Anche in questo caso è l’unico scarpone ad essere impermeabile e al tempo stesso vi permette di avere il piede a contatto con la pelle. Inoltre, grazie all’uso del verde e del marrone siete perfettamente mimetici.</p>
 					<!--
 					<div class="product_count">
 						<label for="qty">Quantity:</label>
@@ -1486,9 +1486,9 @@
 			<div class="tab-pane fade" id="home3" role="tabpanel" aria-labelledby="home-tab">
 				<p>
 					<br>•	Scarponi, fatti a mano dalla nostra famiglia di tre persone, solamente in Italia e artigianalmente(VENETO). Non abbiamo magazzino, produciamo solo su ordinazione in base ai gusti del cliente, alle sue esigenze e in caso, in base ai problemi di gambe o piedi che ha. Dovrete aspettare un pò di più rispetto agli altri marchi, ma dopo avrete un prodotto unico e inimitabile che rispecchia ciò che desideravate.
-					<br>•	Scarponi per boscaioli, fatti a mano dalla nostra famiglia di tre persone, solamente in Italia e artigianalmente(VENETO). Non abbiamo magazzino, produciamo solo su ordinazione in base ai gusti del cliente, alle sue esigenze e in caso, in base ai problemi di gambe o piedi che ha. Dovrete aspettare un pò di più rispetto agli altri marchi, ma dopo avrete un prodotto unico e inimitabile che rispecchia ciò che desideravate.
+					<br>•	Scarponi per cacciatori, fatti a mano dalla nostra famiglia di tre persone, solamente in Italia e artigianalmente(VENETO). Non abbiamo magazzino, produciamo solo su ordinazione in base ai gusti del cliente, alle sue esigenze e in caso, in base ai problemi di gambe o piedi che ha. Dovrete aspettare un pò di più rispetto agli altri marchi, ma dopo avrete un prodotto unico e inimitabile che rispecchia ciò che desideravate.
 					<br>•	Tomaia esterna in pelle di vitello pieno fiore
-					<br>•	Fodera interna in pelle di vitello pieno fiore
+					<br>•	Fodera interna in pelle di vitello pieno fiore copiata con una fodera impermeabile cosi da avere il piede a contatto con la pelle, ma al tempo stesso essere anche impermeabile
 					<br>•	protezione anti-taglio con l’aggiunta di puntale in acciaio per ripararvi dagli urti
 					<br>•	suola vibram mountain block
 					<br>•	lavorazione a ideal con doppia cucitura per una maggiore stabilità in posti sconnessi o per quando si lavora in salite ripide o in discesa, inoltre la calzata sarà più comoda
@@ -1680,7 +1680,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review3" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -2111,7 +2111,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review4" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -2546,7 +2546,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review5" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -3026,7 +3026,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review7" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -3489,7 +3489,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review6" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -3953,7 +3953,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review8" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
