--- a/tempolibero.html
+++ b/tempolibero.html
@@ -382,7 +382,7 @@
                 </div>
 				<!--aaaaaa-->
 				<div class="tab-pane fade show active" id="review" role="tabpanel" aria-labelledby="review-tab">
-					<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+					<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
 					<div class="row">
 						<div class="col-4 text-center"></div>
 							<img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">					
@@ -791,7 +791,7 @@
                 <img class="img-fluid" width="500" src="img-mos/tempolibero/csz.png" alt="">
 			</div>
 			<div class="tab-pane fade show active" id="review1" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -1168,7 +1168,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review2" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -1599,7 +1599,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review3" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -2022,7 +2022,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review4" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -2443,7 +2443,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review5" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
@@ -2606,6 +2606,12 @@
 		<div class="row s_product_inner">
 			<div class="col-lg-6">
 				<div class="s_Product_carousel">
+					<div class="single-prd-item">
+						<img class="img-fluid" src="img-mos/tempolibero/new2.png" alt="">
+					</div>
+					<div class="single-prd-item">
+						<img class="img-fluid" src="img-mos/tempolibero/new1.png" alt="">
+					</div>
 					<div class="single-prd-item">
 						<img class="img-fluid" src="img-mos/tempolibero/g5.png" alt="">
 					</div>
@@ -2860,7 +2866,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review7" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
                 <div class="row">
                     <div class="col-4 text-center"></div>
                         <img class="img-fluid" width="400" src="img-mos/misure1.jpeg" alt="">
