--- a/trial.html
+++ b/trial.html
@@ -489,7 +489,7 @@
 				</div>
 				<!--aaaaaa-->
 				<div class="tab-pane fade show active" id="review" role="tabpanel" aria-labelledby="review-tab">
-					<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+					<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
 					<div class="row">
 						<div class="col-6">
 							<img class="img-fluid" src="img-mos/misure1.jpeg" alt="">
@@ -1006,7 +1006,7 @@
 
 			</div>
 			<div class="tab-pane fade show active" id="review1" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
 					<div class="row">
 						<div class="col-6">
 							<img class="img-fluid" src="img-mos/misure1.jpeg" alt="">
@@ -1207,7 +1207,7 @@
 						<li><a class="active" href="#"><span>Category</span> : Household</a></li>
 						<li><a href="#"><span>Availibility</span> : In Stock</a></li>
 					</ul>-->
-					<p>L’unico modello al mondo che può garantire di proteggere i piedi dei vostri bambini dalla taglia 25 alla taglia 35. Inoltre, è l’unico stivale che vi darà il massimo comfort all’interno, dato l’uso di una pelle morbida e di una fodera più spessa. Infine, la chiusura del polpaccio sarà fatta su misura, quindi si chiuderanno perfettamente.</p>
+					<p>L’unico modello che può garantire di proteggere i piedi dei vostri bambini dalla taglia 25 alla taglia 35. Lo stivale vi darà il massimo comfort all’interno, dato l’uso di una pelle morbida e di una fodera più spessa. Infine, la chiusura del polpaccio sarà fatta su misura, quindi si chiuderanno perfettamente.</p>
 					<!--
 					<div class="product_count">
 						<label for="qty">Quantity:</label>
@@ -1478,7 +1478,7 @@
 			</div>
 			<!--aaaaaa-->
 			<div class="tab-pane fade show active" id="review2" role="tabpanel" aria-labelledby="review-tab">
-				<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+				<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
 				<div class="row">
 					<div class="col-6">
 						<img class="img-fluid" src="img-mos/misure1.jpeg" alt="">
