--- a/turismo.html
+++ b/turismo.html
@@ -413,7 +413,7 @@
 				</div>
 				<!--aaaaaa-->
 				<div class="tab-pane fade show active" id="review" role="tabpanel" aria-labelledby="review-tab">
-					<p>Le misure vanno ASSOLUTAMENTE prese da IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
+					<p>Le misure vanno ASSOLUTAMENTE prese IN PIEDI, inoltre come viene raffigurato in foto la penna deve stare sempre perpendicolare al terreno.</p>
 					<div class="row">
 						<div class="col-6">
 							<img class="img-fluid" src="img-mos/misure1.jpeg" alt="">
