--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 							<h4 style="color: red;" >Contatti</h4>
 							<ul class="list">
 								<li><i class="lnr lnr-home"></i>  Via Piave 37, 31041, Cornuda (TV)</li>
-								<li><i class="lnr lnr-phone-handset"></i>  342 357 4960</li>
+								<li><i class="lnr lnr-phone-handset"></i> tel: 342 357 4960</li>
 								<li><i class="lnr lnr-envelope"></i> calzaturificiomos@gmail.com</li>
 								<li><i class="lnr lnr-tag"></i>  P.IVA IT04494350269</li> <br><br>
 							</ul>
