--- a/trial.html
+++ b/trial.html
@@ -213,7 +213,7 @@
 						<br>•	lo stivale è su misura, per quanto riguarda la forma del piede, della caviglia e del polpaccio.
 						<br>
 						<br>PESO:
-						<br>A 1,7 KG A 2,1 KG PER LE TAGLIE PIU GRANDI
+						<br>A 1,7 KG A 2,1 KG A PAIO PER LE TAGLIE PIU GRANDI
 						<br>ALTEZZA:
 						<br>DA 29 A 36 CM PER LE TAGLIE PIU GRANDI
 					
@@ -740,7 +740,7 @@
 					<br>•	lo stivale è su misura, per quanto riguarda la forma del piede, della caviglia e del polpaccio.
 					<br>
 					<br>PESO:
-					<br>A 1,7 KG A 2,1 KG PER LE TAGLIE PIU GRANDI
+					<br>A 1,7 KG A 2,1 KG A PAIO PER LE TAGLIE PIU GRANDI
 					<br>ALTEZZA:
 					<br>DA 29 A 36 CM PER LE TAGLIE PIU GRAND
 				
