--- a/vintage.html
+++ b/vintage.html
@@ -219,9 +219,9 @@
                     <br>•	lo stivale è su misura, per quanto riguarda la forma del piede, della caviglia e del polpaccio.  
                     <br>
                     <br>PESO
-                    <br>DA 1 KG A 1,4 KG A SCARPA PER I NUMERI PIU GRANDI
+                    <br>DA 900 g A 1,2 KG A SCARPA PER I NUMERI PIU GRANDI
                     <br>ALTEZZA
-                    <br>DA 34 A 37 PER LE TAGLIE PIU GRANDIDI
+                    <br>DA 31 A 35 cm PER LE TAGLIE PIU GRANDIDI
                     </p>
 				</div>
 				<div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
